edition = "2023";

package proto.stack.v1;

import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/endobit/gen/go/proto/stack/v1;stackv1";



//
// Create
//

message CreateEnvironmentRequest {
  string zone = 1;
  string name = 2;
}

//
// Read
//

message ReadEnvironmentsRequest {
  string zone = 1;
  oneof environment {
	string name = 2;
	string glob = 3;
  }
}

message ReadEnvironmentsResponse {
  string zone = 1;
  string name = 2;
}

//
// Update
//

message UpdateEnvironmentRequest {
  message Fields {
	string name = 1;
  }

  string zone = 1;
  string name = 2;
  Fields fields = 3;
}

//
// Delete
//

message DeleteEnvironmentsRequest {
  string zone = 1;
  oneof environment {
	string name = 2;
	string glob = 3;
  }
}




//
// Create
//

message CreateEnvironmentAttrRequest {
  string zone = 1;
  string environment = 2;
  string name = 3;
}

//
// Read
//

message ReadEnvironmentAttrsRequest {
  string zone = 1;
  string environment = 2;
  oneof attr {
    string name = 3;
    string glob = 4;
  }
}

message ReadEnvironmentAttrsResponse {
  string zone = 1;
  string environment = 2;
  string name = 3;
  string value = 4;
  bool protected = 5;
}

//
// Update
//

message UpdateEnvironmentAttrRequest {
  message Fields {
    string name = 1;
    string value = 2;
    bool protected = 3;
  }

  string zone = 1;
  string environment = 2;
  string name = 3;
  Fields fields = 4;
}

//
// Delete
//

message DeleteEnvironmentAttrsRequest {
  string zone = 1;
  string environment = 2;
  oneof attr {
    string name = 3;
    string glob = 4;
  }
}



